--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: PHOTORAMA
 email: ""
 description: "Photo Journal"
-url: "http://sunbliss.github.io"
+url: "http://suxuanxuan.github.io"
 baseurl: /photorama
 instagram_username: ""
 github_username:  ""
